force-app/main/default/objects/copado__Scheduled_Job__c/fields/copado__Apex_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>copado__Apex_Job_ID__c</fullName>
    <label>Apex Job ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>