force-app/main/default/objects/copado__Scheduled_Job__c/fields/copado__Credential__c.field-meta.xml
<CustomField>
    <fullName>copado__Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential</label>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Scheduled Jobs</relationshipLabel>
    <relationshipName>Scheduled_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>