force-app/main/default/objects/copado__Scheduled_Job__c/fields/copado__Delete_Runs_after_days__c.field-meta.xml
<CustomField>
    <fullName>copado__Delete_Runs_after_days__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>When the Job is executed, it will check all Runs that are older than this number of days and delete the historical records.</inlineHelpText>
    <label>Delete Runs after (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>