force-app/main/default/objects/copado__Scheduled_Job__c/fields/copado__Run_as_User__c.field-meta.xml
<CustomField>
    <fullName>copado__Run_as_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This User must have a Copado License assigned, created an credential for his Copado user and created API Key. This API Key will be used for the webhooks.</inlineHelpText>
    <label>Run as User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scheduled_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>