force-app/main/default/objects/copado__Scheduled_Job__c/recordTypes/copado__Test_Execution.recordType-meta.xml
<RecordType>
    <fullName>copado__Test_Execution</fullName>
    <active>true</active>
    <label>Test Execution</label>
</RecordType>