force-app/main/default/objects/copado__Scheduled_Job__c/recordTypes/copado__Webhook.recordType-meta.xml
<RecordType>
    <fullName>copado__Webhook</fullName>
    <active>true</active>
    <label>Webhook</label>
</RecordType>