force-app/main/default/objects/copado__Scheduled_Job__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Run_as_User__c</columns>
    <columns>copado__Message__c</columns>
    <columns>copado__Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>